syntax = "proto3";
package commercionetwork.commerciomint;

// Options section
option go_package = "github.com/commercionetwork/commercionetwork/x/commerciomint/types";

// Import section
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

message Params {
  option (gogoproto.equal) = true;

  string conversion_rate = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  google.protobuf.Duration freeze_period = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
}