syntax = "proto3";
package commercionetwork.commercionetwork.vbr;

// Options section
option go_package = "github.com/commercionetwork/commercionetwork/x/vbr/types";

// Import section
import "gogoproto/gogo.proto";
import "commercionetwork/vbr/params.proto";
import "cosmos/base/v1beta1/coin.proto";


// GenesisState defines the vbr module's genesis state.
message GenesisState {
    repeated cosmos.base.v1beta1.DecCoin poolAmount = 1 [(gogoproto.moretags) = "yaml:\"pool_amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false] ;
   
    Params params = 4 [ (gogoproto.nullable) = false ];
}
